--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <select id="option">
         <option value="" disabled selected>Selecione uma opção</option>
     </select>
-    <textarea id="answer" cols="30" rows="5"> </textarea>
-
+    <textarea id="answer" cols="30" rows="5"></textarea>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="db.js"></script>
+</body>
+</html>
